--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "core-js": "^2.5.4",
         "ng2-charts": "^1.6.0",
         "rxjs": "~6.2.0",
+        "sweetalert": "^2.1.0",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
